# IZ2

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
ci/travis/: install-linux.sh  install-osx.sh
include/IZ2/: utils.h
include/vectlib/: num_of_cores.h  utils.h
src/: main.c  num_of_cores.c  utils.c
src/IZ2/: main.c
src/vectlib/: num_of_cores.c  utils.c
src/vectlib_p/: utils.c
src/vectlib_s/: utils.c
test/: CMakeLists.txt  utils.cpp
test/Resources/: test.txt
txt/: file_base.txt
